--- a/templates/my.cnf.j2
+++ b/templates/my.cnf.j2
@@ -43,7 +43,7 @@ server-id = {{ mysql_server_id }}
 {% if mysql_replication_role == 'master' %}
 log_bin = mysql-bin
 log-bin-index = mysql-bin.index
-expire_logs_days = {{ mysql_expire_logs_days }}
+binlog_expire_logs_seconds = {{ mysql_expire_logs_seconds }}
 max_binlog_size = {{ mysql_max_binlog_size }}
 binlog_format = {{mysql_binlog_format}}
 
